[project]
name = "qt-excel-sqlite"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dingjz", email = "dinger2dinger@gmail.com"},
]
dependencies = ["requests>=2.32.3", "PyQt5>=5.15.11", "pyqt5-qt5==5.15.2", "QScintilla>=2.14.1", "pandas>=2.2.3", "openpyxl>=3.1.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
[tool.pdm.scripts]
start = "python main.py"
